[package]
name = "itertools-wild"
version = "0.1.1"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/itertools-wild"
documentation = "https://docs.rs/itertools-wild/"
authors = ["bluss", "jameysharp"]

description = "Extra wild iterator adaptors, wild iterator methods, wild free functions, and wild macros."

keywords = ["iterator", "data-structure", "zip", "product", "group-by"]
categories = ["algorithms", "rust-patterns"]

[lib]
bench = false
test = false

[dependencies]
either = { version = "1.0", default-features = false }
itertools = "0.6.2"

[dev-dependencies.quickcheck]
version = "0.4"
default-features = false

[package.metadata.release]
no-dev-version = true
